<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BLogin">

    <ImageView
        android:id="@+id/ivBackgroundLOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/planetearth" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_fondo">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/civLogo3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/rocketlogo" />

        <TextView
            android:id="@+id/tvTitulo"
            style="@style/style_tvTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tvTitle1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_fondo"
            android:background="@color/panel_login"
            android:orientation="vertical"
            android:padding="@dimen/padding_fondo">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_tilNombre" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilApellidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_fondo">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_tilApellidos" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login"
            android:onClick="c_btnLogin"
            android:text="@string/txt_btnLogin" />

    </LinearLayout>
</RelativeLayout>