<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMain">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scrim" />

    <LinearLayout
        android:id="@+id/llPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_fondo">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/civRocletLogo2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/rocketlogo" />

        <TextView
            android:id="@+id/tvTitle3"
            style="@style/style_tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/txt_tvTitle3"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPart1"
        android:layout_marginBottom="-4dp">

        <ScrollView
            android:id="@+id/scBody"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:layout_above="@+id/llBotones"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_fondo">

                <TextView
                    android:id="@+id/tvBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_tvBody" />

            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivBackground"
        android:layout_marginTop="-48dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/white"
        android:paddingStart="@dimen/padding_fondo"
        android:paddingEnd="@dimen/padding_fondo"
        android:paddingBottom="@dimen/padding_fondo">

        <Button
            android:id="@+id/btnBoton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/b_button"
            android:text="@string/txt_btnBoton1"
            android:textColor="#216FED" />

        <Button
            android:id="@+id/btnBoton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/d_button"
            android:text="@string/txt_btnBoton2"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>